<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              tools:context=".CadastroActivity">

    <TextView
            style="@style/titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_cadastro"
            android:textAllCaps="true"/>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


            <EditText
                    android:id="@+id/name"
                    style="@style/editText"
                    android:hint="@string/txt_name"
                    android:inputType="text" />

            <EditText
                    android:id="@+id/address"
                    style="@style/editText"
                    android:hint="@string/txt_address"
                    android:inputType="text"/>

            <EditText  android:id="@+id/number"
                        style="@style/editText"
                        android:hint="@string/txt_number"
                        android:inputType="text"/>

            <EditText  android:id="@+id/complement"
                       style="@style/editText"
                       android:hint="@string/txt_complement"
                       android:inputType="text"/>

            <EditText  android:id="@+id/neighborhood"
                       style="@style/editText"
                       android:hint="@string/txt_neighborhood"
                       android:inputType="text"/>

            <EditText  android:id="@+id/zip_code"
                       style="@style/editText"
                       android:hint="@string/txt_zip_code"
                       android:inputType="text"/>

            <EditText  android:id="@+id/city"
                       style="@style/editText"
                       android:hint="@string/txt_city"
                       android:inputType="text"/>

            <TextView
                    style="@style/editText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_state"/>

            <Spinner
                    style="@style/editText"
                    android:id="@+id/mySpinner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            <Button
                    android:id="@+id/email_sign_in_button"
                    style="?android:textAppearanceInverse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/txt_cadastro"
                    android:layout_marginBottom="20dp"
                    android:textStyle="bold" android:background="@color/colorPrimary"/>




        </LinearLayout>


    </ScrollView>

</LinearLayout>