<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              tools:context=".LoginActivity">
    <TextView
            android:id="@+id/tvLogin"
            style="@style/titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_logon"
            android:textAllCaps="true"  />

    <ScrollView
             android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <EditText
                        android:id="@+id/userName"
                        style="@style/editText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"


                        android:hint="@string/txt_email"
                        android:inputType="textEmailAddress"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <EditText
                        android:id="@+id/password"
                        style="@style/editText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/txt_senha"
                        android:inputType="textPassword"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                    android:id="@+id/email_sign_in_button"
                    style="?android:textAppearanceInverse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/botaoLogin"
                    android:onClick="logar"
                    android:textStyle="bold" android:background="@color/colorPrimary"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>