<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context=".MenuActivity">

    <TextView
            android:id="@+id/textView"
            style="@style/titulo"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/txt_menu"  />

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_padding_top"
                    android:gravity="center"
                    android:orientation="horizontal" >

                <ImageButton
                        android:layout_width="77dp"
                        android:layout_height="68dp" app:srcCompat="@drawable/ic_account_circle_black_24dp"
                        tools:layout_editor_absoluteY="104dp" tools:layout_editor_absoluteX="113dp"
                        android:id="@+id/imageView"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_pessoas"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:textSize="23dp"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/activity_padding_top"
                    android:orientation="horizontal" >

                <ImageButton
                        android:layout_width="77dp"
                        android:onClick="cadastro"
                        android:layout_height="68dp" app:srcCompat="@drawable/ic_create_new_folder_black_48dp"
                        tools:layout_editor_absoluteY="104dp" tools:layout_editor_absoluteX="113dp"
                        android:id="@+id/imageView2"/>
                <TextView
                        android:id="@+id/tvIMCDescricao2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_cadastro"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:textSize="23dp"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/activity_padding_top"
                    android:orientation="horizontal" >

                <ImageButton
                        android:layout_width="77dp"

                        android:layout_height="68dp" app:srcCompat="@drawable/ic_border_color_black_48dp"
                        tools:layout_editor_absoluteY="104dp" tools:layout_editor_absoluteX="113dp"
                        android:id="@+id/imageView5"/>
                <TextView
                        android:id="@+id/tvIMCDescricao5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_editt"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:textSize="23dp"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/activity_padding_top"
                    android:orientation="horizontal" >

                <ImageButton
                        android:layout_width="77dp"
                        android:layout_height="68dp" app:srcCompat="@drawable/ic_power_settings_new_black_48dp"
                        tools:layout_editor_absoluteY="104dp" tools:layout_editor_absoluteX="113dp"
                        android:id="@+id/imageView3"/>
                <TextView
                        android:id="@+id/tvIMCDescricao3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_logout"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:textSize="23dp"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_padding_top"
                    android:gravity="center"
                    android:orientation="horizontal" >

                <ImageButton
                        android:layout_width="77dp"

                        android:layout_height="68dp" app:srcCompat="@drawable/ic_mouse_black_36dp"
                        tools:layout_editor_absoluteY="104dp" tools:layout_editor_absoluteX="113dp"
                        android:id="@+id/imageView4"/>

                <TextView
                        android:id="@+id/tvIMCDescricao4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_sobre"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:textSize="23dp"/>

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>